<resources>
    <string name="app_name">dairy</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="create_record">Create Record</string>
    <string name="create_notification">Create Notification</string>
    <string name="description">Text</string>
    <string name="add_photo">Attach photo</string>
    <string name="open_camera">Open camera</string>
    <string name="save">Save</string>
    <string name="no_notifications">You haven\'t setup notification</string>
    <string name="clear_notification">Clear notification</string>
    <string name="register_notification">Register notification</string>
    <string name="notification_header">Dairy notification!</string>
    <string name="add_geotag">Add geotag</string>
    <string name="no_geotag">No geotag</string>
</resources>