<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ktepin.penzasoft.dairy.view.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_create"
            app:destination="@id/navigation_create" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="ktepin.penzasoft.dairy.view.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ktepin.penzasoft.dairy.view.NotificationsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_create"
        android:name="ktepin.penzasoft.dairy.view.CreateRecordFragment"
        android:label="@string/create_record"
        tools:layout="@layout/fragment_create_record" />

</navigation>