<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CreateRecordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="10dp">


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="10dp"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/decrField"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:hint="@string/description"
                app:layout_constraintTop_toBottomOf="@+id/textField">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/geotag_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_geotag"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/decrField" />

            <Button
                android:id="@+id/addGeotag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_geotag"
                app:layout_constraintTop_toBottomOf="@+id/geotag_text"
                style="?attr/materialButtonOutlinedStyle"
                />

            <Button
                android:id="@+id/addPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_photo"
                app:layout_constraintTop_toBottomOf="@+id/addGeotag"
                style="?attr/materialButtonOutlinedStyle"
                />

            <Button
                android:id="@+id/openCamera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_camera"
                app:layout_constraintTop_toBottomOf="@+id/addPhoto"
                style="?attr/materialButtonOutlinedStyle"
                />
            <ImageView
                android:id="@+id/imageView"
                android:scaleType="centerInside"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/openCamera"
               />
            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/filler"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toBottomOf="@+id/saveButton">
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintTop_toBottomOf="@+id/filler">
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>